del non fonctionnel

--- a/JS/TP4_Corriger/CH3exo8BIS.htm
+++ b/JS/TP4_Corriger/CH3exo8BIS.htm
@@ -71,11 +71,10 @@
 
     </script>
 </head>
-<body bgcolor="#afffff">
+<body bgcolor="#afffff"
 <form>
     <p>
-        <select name="liste" id="liste">
-        </select>
+        <select name="liste" id="liste"></select>
     </p>
     <label>reférence: <input type="text" name="ref" id="ref" size="5" disabled></label>
     <label>designation: <input type="text" name="des" id="des" size="35" readonly></label>
