--- a/JS/DM/home.html
+++ b/JS/DM/home.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </head>
 <body>
@@ -12,15 +17,15 @@
             <label for="nom">Nom: </label>
             <input id="nom" type="text" name="nom" required autofocus>
             <label for="prenom">Prenom: </label>
-            <input id="prenom" type="text" name="prenom" required>
-            <label for="mail">Mail: </label>
-            <input id="mail" type="email" pattern="^[A-zÀ-ú0-9]+([-_.]?[A-zÀ-ú0-9])*@[A-zÀ-ú0-9]+[.][a-z0-9]{2,4}$" name="mail" required><!--Changer le pattern-->
+            <input id="prenom" type="text" name="prenom" required><br>
+            <label for="adresse">Adresse</label>
+            <input id="adresse" type="text" name="adresse" required><br>
             <label for="code">Code Postale: </label>
             <input id="code" type="number" min="1000" max="98890" name="code" required><!--Changer le pattern--><!--Max et Min basée sur le fichier: https://www.data.gouv.fr/fr/datasets/base-officielle-des-codes-postaux/-->
             <label for="ville">Ville: </label>
-            <input id="ville" type="text" name="ville" required>
-            <label for="adresse">Adresse</label>
-            <input id="adresse" type="text" name="adresse" required>
+            <input id="ville" type="text" name="ville" required><br>
+            <label for="mail">Mail: </label>
+            <input id="mail" type="email" pattern="^[A-zÀ-ú0-9]+([-_.]?[A-zÀ-ú0-9])*@[A-zÀ-ú0-9]+[.][a-z0-9]{2,4}$" name="mail" required><!--Changer le pattern-->
             <label for="numTel">Téléphone</label>
             <input id="numTel" type="text" pattern="^0[1-9]([\s]?[0-9]{2}){4}" title="xx xx xx xx xx" name="telephone" required><!--Changer le pattern-->
         </fieldset>
