--- a/HTML-CSS/2020_legumontagne/index.html
+++ b/HTML-CSS/2020_legumontagne/index.html
@@ -86,11 +86,9 @@
         </div>
 
         <!--Début partie actus légumes-->
-        <div class="">
+        <div class="zone_actualites">
             <div class="">
-            </div>
-            <div class="">
-                <div class="">
+                <div class="titre_actu">
                     <div class="">
                         <img class="icone-actu" src="img/news-legumes.jpg" alt="Logo News légumes"/>
                     </div>
@@ -100,12 +98,11 @@
                 </div>
 
                 <!--Ajout actu 1-->
-                <div class="">
-                    <div class="actu">
+                <div class="actu">
+                    <div class="image_actu">
                         <img class="img-actu" src="img/tomates.jpg" alt="Logo News légumes"/>
                     </div>
-
-                    <div class="">
+                    <div class="texte_actu">
                         <p class="texte_actu">
                             Exceptionnellement rendez-vous au marché de Gap ce samedi !
                         </p>
@@ -113,12 +110,12 @@
                 </div>
                 <!--Fin de l'actu 1-->
                 <!--Ajout actu 2-->
-                <div class="">
-                    <div class="actu">
+                <div class="actu">
+                    <div class="image_actu">
                         <img class="img-actu" src="img/tomates.jpg" alt="Logo News légumes"/>
                     </div>
 
-                    <div class="">
+                    <div class="texte_actu">
                         <p class="texte_actu">
                             Je serai à la fête del’agriculture le 20.05.18 à Saint-Bonnet
                         </p>
@@ -131,7 +128,7 @@
             <!--Début partie actus pain-->
 
             <div class="">
-                <div class="">
+                <div class="titre_actu">
                     <div class="">
                         <img class="icone-actu" src="img/news-pain.png" alt="Logo News pain"/>
                     </div>
@@ -141,12 +138,12 @@
                 </div>
 
                 <!--Ajout actu 1-->
-                <div class="">
-                    <div class="actu">
+                <div class="actu">
+                    <div class="image_actu">
                         <img class="img-actu" src="img/pain.jpg" alt="Logo News pain"/>
                     </div>
 
-                    <div class="">
+                    <div class="texte_actu">
                         <p class="texte_actu">
                             Nouveau pain bio multi-graines, venez le découvrir !
                         </p>
@@ -166,8 +163,7 @@
 
     <div class="">
         <div class="">
-            <div id="legumes" class="cadre_vert img-texte-legumes">
-            </div>
+            <div id="legumes" class="cadre_vert img-texte-legumes"></div>
         </div>
         <div class="">
             <div class="">
