--- a/JS/DM/home.html
+++ b/JS/DM/home.html
@@ -9,87 +9,38 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            background-color: #C0C0C0;
+        }
+
+        label{
+            width: 110px;
+        }
+
+        input{
+            margin-left: 10px;
+            width: 200px;
+        }
+
+        fieldset:nth-child(2) input{
+            width: 75px;
+        }
+
+        fieldset:nth-child(1) input:nth-child(8){
+            width: 530px;
+        }
+
+        button{
+            width: 45%;
+            margin: 2%;
+        }
+
+    </style>
 </head>
 <body>
-    <form>
-        <fieldset>
-            <legend>Identification</legend>
-            <label for="nom">Nom: </label>
-            <input id="nom" type="text" name="nom" required autofocus>
-            <label for="prenom">Prenom: </label>
-            <input id="prenom" type="text" name="prenom" required><br>
-            <label for="adresse">Adresse</label>
-            <input id="adresse" type="text" name="adresse" required><br>
-            <label for="code">Code Postale: </label>
-            <input id="code" type="number" min="1000" max="98890" name="code" required><!--Changer le pattern--><!--Max et Min basée sur le fichier: https://www.data.gouv.fr/fr/datasets/base-officielle-des-codes-postaux/-->
-            <label for="ville">Ville: </label>
-            <input id="ville" type="text" name="ville" required><br>
-            <label for="mail">Mail: </label>
-            <input id="mail" type="email" pattern="^[A-zÀ-ú0-9]+([-_.]?[A-zÀ-ú0-9])*@[A-zÀ-ú0-9]+[.][a-z0-9]{2,4}$" name="mail" required><!--Changer le pattern-->
-            <label for="numTel">Téléphone</label>
-            <input id="numTel" type="text" pattern="^0[1-9]([\s]?[0-9]{2}){4}" title="xx xx xx xx xx" name="telephone" required><!--Changer le pattern-->
-        </fieldset>
-        <fieldset>
-            <legend>Sélection des produits</legend>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Référence</th>
-                        <th>Prix</th>
-                        <th>Quantité</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><select name="liste1" id="liste1"></select></td>
-                        <td><input type="text" name="prix1" id="prix1" disabled></td>
-                        <td><input type="text" name="quant1" id="quant1" disabled></td>
-                        <td><input type="button" id="bt1" value="+"></td>
-                        <td><input type="button" id="bt2" value="-"></td>
-                        <td><input type="button" id="bt3" value="x"></td>
-                    </tr>
-                    <tr>
-                        <td><select name="liste2" id="liste2"></select></td>
-                        <td><input type="text" name="prix2" id="prix2" disabled></td>
-                        <td><input type="text" name="quant2" id="quant2" disabled></td>
-                        <td><input type="button" id="bt4" value="+"></td>
-                        <td><input type="button" id="bt5" value="-"></td>
-                        <td><input type="button" id="bt6" value="x"></td>
-                    </tr>
-                    <tr>
-                        <td><select name="liste3" id="liste3"></select></td>
-                        <td><input type="text" name="prix3" id="prix3" disabled></td>
-                        <td><input type="text" name="quant3" id="quant3" disabled></td>
-                        <td><input type="button" id="bt7" value="+"></td>
-                        <td><input type="button" id="bt8" value="-"></td>
-                        <td><input type="button" id="bt9" value="x"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </fieldset>
-        <fieldset>
-            <legend>Montants</legend>
-            <table>
-                <tbody>
-                    <tr>
-                        <td>Montant HT: </td>
-                        <td><input type="text" name="mtht" id="mtht" disabled></td>
-                    </tr>
-                    <tr>
-                        <td>Montant TVA (19.6%): </td>
-                        <td><input type="text" name="mttva" id="mttva" disabled></td>
-                    </tr>
-                    <tr>
-                        <td>Montant TTC: </td>
-                        <td><input type="text" name="mtttc" id="mtttc" disabled></td>
-                    </tr>
-                </tbody>
-            </table>
-        </fieldset>
-        <button type="submit">Validation</button>
-        <button type="reset">Reset</button>
-    </form>
-
 
 </body>
 </html>
