--- a/HTML-CSS/2020_legumontagne/index.html
+++ b/HTML-CSS/2020_legumontagne/index.html
@@ -165,10 +165,8 @@
         <div class="">
             <div id="legumes" class="cadre_vert img-texte-legumes"></div>
         </div>
-        <div class="">
-            <div class="">
-            </div>
-            <div class="">
+        <div class="zone_legume">
+            <div class="presentation_legume">
                 <h2 class="cadre_vert_titre">Jacques, producteur de légumes</h2>
                 <img class="img-producteur" src="img/producteur-legumes.jpg" alt="Photo du producteur de légumes"
                      title="Photo du producteur de légumes"/>
@@ -185,9 +183,9 @@
                 <!--Début slide légumes-->
                 <div id="carousel_legume" class="">
                     <div class="">
-                        <div class="">
+                        <div class="pesticide_legume">
                             <img class="" src="img/slide-legume1.jpg" alt="photo légumes">
-                            <h5 class="slide-legumes">Slide légumes 1</h5>
+                            <h5 class="slide-legumes">Légume Produit sans pesticide !!</h5>
                         </div>
                     </div>
                 </div>
