ajour des id for

--- a/CEO-Referencement/TP1/indexOld.html
+++ b/CEO-Referencement/TP1/indexOld.html
@@ -7,19 +7,22 @@
     <title>MIW - Day 1</title>
     <link href="css/style.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=RobotoDraft:100,300,400,500" rel="stylesheet">
+    <!--
+        Code d'exemple non-optimisé... Day 1.
+	-->
 </head>
 
 <body>
 <div class="container">
     <header id="header">
-        <img id="n134" height="" src="https://iut.univ-amu.fr/sites/iut.univ-amu.fr/themes/web_template/images/logo_iut.png" alt="logo IUT">
+        <img height="" src="https://iut.univ-amu.fr/sites/iut.univ-amu.fr/themes/web_template/images/logo_iut.png" id="n134">
         <nav>
             <ul>
                 <li>
                     <a href="#">Accueil</a>
                 </li>
                 <li>
-                    <a href="#region-sidebar">Contact</a>
+                    <a href="#">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -28,7 +31,8 @@
     <div id="region-top">
         <div class="article-left">
             <article>
-                <img src="https://think.storage.googleapis.com/images/mm-guide-be-there-hp-hero.jpg" width="634" height="544" alt="image article">
+                <img src="https://think.storage.googleapis.com/images/mm-guide-be-there-hp-hero.jpg" width="634"
+                     height="544">
                 <div>
                     <h1>
                         <a href="#">Titre de l'article 11 </a>
@@ -41,7 +45,8 @@
 
         <div class="article-right">
             <article>
-                <img src="https://think.storage.googleapis.com/images/winning-omni-channel-shoppers-micro-moments-bn.jpg" width="200" alt="image article">
+                <img src="https://think.storage.googleapis.com/images/winning-omni-channel-shoppers-micro-moments-bn.jpg"
+                     width="200">
                 <div>
                     <h1>
                         <a href="#">Video Micro-Moments: What Do They Mean for Your Video Strategy?</a>
@@ -55,7 +60,8 @@
             </article>
 
             <article>
-                <img src="https://think.storage.googleapis.com/images/video-micro-moments-what-do-they-mean-for-your-video-strategy-lg.jpg" width="200" alt="image article">
+                <img src="https://think.storage.googleapis.com/images/video-micro-moments-what-do-they-mean-for-your-video-strategy-lg.jpg"
+                     width="200">
                 <div>
                     <h1>
                         <a href="#">Winning Omni-Channel Shoppers in Their Micro-Moments</a>
@@ -71,7 +77,7 @@
     </div>
     <div id="region-main">
         <article>
-            <img src="https://think.storage.googleapis.com/images/mm_betterstrategy_454x255.png" alt="image article"/>
+            <img src="https://think.storage.googleapis.com/images/mm_betterstrategy_454x255.png"/>
             <div>
                 <h1>Titre de l'article</h1>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
@@ -84,7 +90,7 @@
             </div>
         </article>
         <article>
-            <img src="https://think.storage.googleapis.com/images/micro-moments-shopper-journey-report-harvard-business-review-1-sm.jpg" alt="image article"/>
+            <img src="https://think.storage.googleapis.com/images/micro-moments-shopper-journey-report-harvard-business-review-1-sm.jpg"/>
             <div>
                 <h1>Titre de l'article</h1>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
@@ -98,7 +104,7 @@
             </div>
         </article>
         <article>
-            <img src="https://think.storage.googleapis.com/images/how-moms-use-youtube-videos-new-trends-and-insights-sm-1.jpg" alt="image article"/>
+            <img src="https://think.storage.googleapis.com/images/how-moms-use-youtube-videos-new-trends-and-insights-sm-1.jpg"/>
             <div>
                 <h1>Titre de l'article</h1>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
@@ -117,23 +123,23 @@
         <h1>Contactez-nous</h1>
 
         <form action="#">
-            <label for="nm">Nom :</label>
-            <input id="nm" type="text" name="name"/>
+            <label>Nom :</label>
+            <input type="text" name="name"/>
             <br/>
 
-            <label for="pn">Prénom :</label>
-            <input id="pn" type="text"/>
+            <label>Prénom :</label>
+            <input type="text"/>
 
             <br/>
-            <label for="societe">Société :</label>
-            <input id="societe" type="text"/>
+            <label>Société :</label>
+            <input type="text"/>
 
             <br/>
-            <label for="tel">Téléphone :</label>
-            <input id="tel" type="text"/>
+            <label>Téléphone :</label>
+            <input type="text"/>
 
             <br/>
-            <label >Email :</label>
+            <label>Email :</label>
             <input type="email" name="email" required/>
 
             <br/>
