--- a/CEO-Referencement/TP1/index.html
+++ b/CEO-Referencement/TP1/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIW - Day 1</title>
+    <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=RobotoDraft:100,300,400,500" rel="stylesheet">
 </head>
