--- a/CEO-Referencement/TP1/index.html
+++ b/CEO-Referencement/TP1/index.html
@@ -12,8 +12,8 @@
 
 <body>
 <div class="container">
-    <header id="header">
-        <img id="n134" height="" src="https://iut.univ-amu.fr/sites/iut.univ-amu.fr/themes/web_template/images/logo_iut.png" alt="logo IUT">
+    <header>
+        <img class="logo" height="" src="https://iut.univ-amu.fr/sites/iut.univ-amu.fr/themes/web_template/images/logo_iut.png" alt="logo IUT">
         <nav>
             <ul>
                 <li>
