--- a/CEO-Referencement/TP1/index.html
+++ b/CEO-Referencement/TP1/index.html
@@ -15,7 +15,7 @@
     <header>
         <img class="logo" height="" src="https://iut.univ-amu.fr/sites/iut.univ-amu.fr/themes/web_template/images/logo_iut.png" alt="logo IUT">
         <nav>
-            <ul>
+            <ul class="link_menu">
                 <li>
                     <a href="#">Accueil</a>
                 </li>
