fin css article 1

--- a/CEO-Referencement/TP1/index.html
+++ b/CEO-Referencement/TP1/index.html
@@ -26,11 +26,11 @@
         </nav>
     </header>
 
-    <div id="region-top">
+    <div class="region-top">
         <div class="article-left">
             <article>
-                <img src="https://think.storage.googleapis.com/images/mm-guide-be-there-hp-hero.jpg" width="634" height="544" alt="image article">
-                <div>
+                <img class="img-left" src="https://think.storage.googleapis.com/images/mm-guide-be-there-hp-hero.jpg" width="634" height="544" alt="image article">
+                <div class="content">
                     <h2>
                         <a href="#">Titre de l'article 11 </a>
                     </h2>
