css article main region

--- a/CEO-Referencement/TP1/index.html
+++ b/CEO-Referencement/TP1/index.html
@@ -70,7 +70,7 @@
             </article>
         </div>
     </div>
-    <div id="region-main">
+    <div class="region-main">
         <article>
             <img src="https://think.storage.googleapis.com/images/mm_betterstrategy_454x255.png" alt="image article"/>
             <div>
@@ -92,8 +92,7 @@
                     laoreet dolore magna aliquam erat volutpat.</p>
                 <ul class="tags">
                     <li>
-                        <a href="#"
-                        "vidéo article">Vidéo</a>
+                        <a href="#" class="vidéo article">Vidéo</a>
                     </li>
                 </ul>
             </div>
