--- a/CEO-Referencement/TP1/index.html
+++ b/CEO-Referencement/TP1/index.html
@@ -112,7 +112,7 @@
         </article>
     </div>
 
-    <div id="region-sidebar">
+    <div class="region-sidebar">
 
         <h4>Contactez-nous</h4>
 
