--- a/HTML-CSS/Toggle/index.html
+++ b/HTML-CSS/Toggle/index.html
@@ -1,10 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+        input:checked + .slider {
+            background-color: #2196F3;
+        }
+
+        input:focus + .slider {
+            box-shadow: 0 0 1px #2196F3;
+        }
+
+        input:checked + .slider:before {
+            -webkit-transform: translateX(26px);
+            -ms-transform: translateX(26px);
+            transform: translateX(26px);
+        }
+
+        /* Rounded sliders */
+        .slider.round {
+            border-radius: 34px;
+        }
+
+        .slider.round:before {
+            border-radius: 50%;
+        }
+    </style>
+
+    <script>
+        /* $(n) : raccourci pour atteindre un noeud HTML                                           */
+        $ = (n)=>{return document.getElementsByClassName(n)};
+
+        function changeClass(){
+            var classList = $("slider")[0].className.split(" ");
+            console.log(classList[2]);
+            if (classList[2] == "on"){
+                $("slider")[0].className = "slider round off";
+            }else if(classList[2] == "off"){
+                $("slider")[0].className = "slider round on";
+            }
+            console.log("ok");
+        }
+
+
+    </script>
 <body>
-$END$
+
+<h2>Toggle Switch</h2>
+
+
+<label class="switch">
+    <input type="checkbox" checked>
+    <span class="slider round on" onclick="changeClass()"></span>
+</label>
+
 </body>
 </html>
