--- a/JS/Controle/exo1.html
+++ b/JS/Controle/exo1.html
@@ -1,10 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Exercice 1</title>
+    <script>
+        /* $(n) : raccourci pour atteindre un noeud HTML                                           */
+        $ = (n)=>{return document.getElementById(n)};
+
+        var Reg = new RegExp();
+        var cpt = "^((0[1-9])|(1[0-5]))-[A-I]([0-9]){5}-[0-9]{2}$";
+        Reg.value = cpt;
+
+
+        function conformCpt(n){
+            if (Reg.test(n)){
+                return true;
+            }else{
+                return false;
+            }
+        };
+
+
+
+        function validCpt(n){
+            if (conformCpt(n)){
+                var newN = n;
+                var somme = 0;
+
+                //Echange la premiere lettre en un chiffre
+                switch (newN[3]){
+                    case 'A':
+                        newN = newN.replace('A', "1");
+                        break;
+                    case 'B':
+                        newN = newN.replace('B', "2");
+                        break;
+                    case 'C':
+                        newN = newN.replace('C', "3");
+                        break;
+                    case 'D':
+                        newN = newN.replace('D', "4");
+                        break;
+                    case 'E':
+                        newN = newN.replace('E', "5");
+                        break;
+                    case 'F':
+                        newN = newN.replace('F', "6");
+                        break;
+                    case 'G':
+                        newN = newN.replace('G', "7");
+                        break;
+                    case 'H':
+                        newN = newN.replace('H', "8");
+                        break;
+                    case 'I':
+                        newN = newN.replace('I', "9");
+                        break;
+                }
+
+                //calcul la somme de tout le numero de compte
+                for (let i = 0; i < newN.length; i++) {
+                    if ((i == 0 || i%2 ==0) && (i != 2)){
+                        console.log(i+" pair");
+                        console.log(newN[i]);
+
+                        somme += 1*parseInt(newN[i]);
+                        console.log(somme);
+                    }else if (i != 9 && i!=2){
+                        console.log(i+" impair");
+                        console.log(newN[i]);
+                        somme += 3*parseInt(newN[i]);
+                        console.log(somme);
+                    }else{
+                        console.log("...");
+                    }
+                }
+
+                somme = somme%23;
+
+                if (somme-parseInt(newN[10]+newN[11]) == 0){
+                    return true;
+                }else{
+                    return false;
+                }
+            }else{
+                return false;
+            }
+        };
+
+        function test(){
+            if ($("num").value == ""){
+                $("text").value = "Saisir un numero";
+                $("text").style = "color: #ff0000;";
+                return false;
+            }else if(conformCpt($("num").value) == false){
+                $("text").value = "Numéro non conforme";
+                $("text").style = "color: #ff0000;";
+                return false;
+            }else if(validCpt($("num").value) == false){
+                $("text").value = "Numéro non valide";
+                $("text").style = "color: #ff0000;";
+                return false;
+            }else if (validCpt($("num").value)){
+                $("text").value = "Numéro valide";
+                $("text").style = "color: #00ff00;";
+                return false
+            }
+        }
+    </script>
 </head>
 <body>
-$END$
+    <form onsubmit="return test()">
+        <label for="num">Numero de Compte</label>
+        <input type="text" id="num" name="num"><br>
+        <button type="submit">OK</button>
+        <textarea name="text" id="text" readonly></textarea>
+    </form>
 </body>
 </html>
