--- a/HTML-CSS/Starter_HTML/index.html
+++ b/HTML-CSS/Starter_HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Title</title>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <link type="text/css" href="css/reset.css" rel="stylesheet">
     <link type="text/css" href="css/style.css" rel="stylesheet">
 </head>
