--- a/CEO-Referencement/TP1/index.html
+++ b/CEO-Referencement/TP1/index.html
@@ -13,7 +13,8 @@
 <body>
 <div class="container">
     <header>
-        <img class="logo" height="" src="https://iut.univ-amu.fr/sites/iut.univ-amu.fr/themes/web_template/images/logo_iut.png" alt="logo IUT">
+        <img class="logo" height=""
+             src="https://iut.univ-amu.fr/sites/iut.univ-amu.fr/themes/web_template/images/logo_iut.png" alt="logo IUT">
         <nav>
             <ul class="link_menu">
                 <li>
@@ -29,7 +30,8 @@
     <div class="region-top">
         <div class="article-left">
             <article>
-                <img class="img-left" src="https://think.storage.googleapis.com/images/mm-guide-be-there-hp-hero.jpg" width="634" height="544" alt="image article">
+                <img class="img-left" src="https://think.storage.googleapis.com/images/mm-guide-be-there-hp-hero.jpg"
+                     width="634" height="544" alt="image article">
                 <div class="content">
                     <h2>
                         <a href="#">Titre de l'article 11 </a>
@@ -42,7 +44,8 @@
 
         <div class="article-right">
             <article>
-                <img src="https://think.storage.googleapis.com/images/winning-omni-channel-shoppers-micro-moments-bn.jpg" width="200" alt="image article">
+                <img src="https://think.storage.googleapis.com/images/winning-omni-channel-shoppers-micro-moments-bn.jpg"
+                     width="200" alt="image article">
                 <div>
                     <h3>
                         <a href="#">Video Micro-Moments: What Do They Mean for Your Video Strategy?</a>
@@ -56,7 +59,8 @@
             </article>
 
             <article>
-                <img src="https://think.storage.googleapis.com/images/video-micro-moments-what-do-they-mean-for-your-video-strategy-lg.jpg" width="200" alt="image article">
+                <img src="https://think.storage.googleapis.com/images/video-micro-moments-what-do-they-mean-for-your-video-strategy-lg.jpg"
+                     width="200" alt="image article">
                 <div>
                     <h3>
                         <a href="#">Winning Omni-Channel Shoppers in Their Micro-Moments</a>
@@ -85,7 +89,8 @@
             </div>
         </article>
         <article>
-            <img src="https://think.storage.googleapis.com/images/micro-moments-shopper-journey-report-harvard-business-review-1-sm.jpg" alt="image article"/>
+            <img src="https://think.storage.googleapis.com/images/micro-moments-shopper-journey-report-harvard-business-review-1-sm.jpg"
+                 alt="image article"/>
             <div>
                 <h2>Titre de l'article</h2>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
@@ -98,7 +103,8 @@
             </div>
         </article>
         <article>
-            <img src="https://think.storage.googleapis.com/images/how-moms-use-youtube-videos-new-trends-and-insights-sm-1.jpg" alt="image article"/>
+            <img src="https://think.storage.googleapis.com/images/how-moms-use-youtube-videos-new-trends-and-insights-sm-1.jpg"
+                 alt="image article"/>
             <div>
                 <h2>Titre de l'article</h2>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
