affichage des reseaux

--- a/CEO-Referencement/TP2/index.html
+++ b/CEO-Referencement/TP2/index.html
@@ -23,12 +23,12 @@
 
     <div class="container_body">
         <div class="reseaux_sociaux">
-            <a href="#" ><p class="flaticon-facebook"></p></a>
-            <a href="#" ><p class="flaticon-twitter"></p></a>
-            <a href="#" ><p class="flaticon-instagram"></p></a>
-            <a href="#" ><p class="flaticon-pinterest-social-logo"></p></a>
-            <a href="#" ><p class="flaticon-youtube"></p></a>
-            <a href="#" ><p class="flaticon-linkedin"></p></a>
+            <a href="#" ><p class="flaticon-facebook"></p><p>Facebook</p></a>
+            <a href="#" ><p class="flaticon-twitter"></p><p>Twitter</p></a>
+            <a href="#" ><p class="flaticon-instagram"></p><p>Instagram</p></a>
+            <a href="#" ><p class="flaticon-pinterest-social-logo"></p><p>Pinterest</p></a>
+            <a href="#" ><p class="flaticon-youtube"></p><p>Youtube</p></a>
+            <a href="#" ><p class="flaticon-linkedin"></p><p>Linkedin</p></a>
         </div>
 
 
