--- a/CEO-Referencement/TP2/index.html
+++ b/CEO-Referencement/TP2/index.html
@@ -9,34 +9,34 @@
 <body>
     <div class="container">
         <nav>
-            <a href="#" ><img src="image/lauzanne_logo.png" alt="Logo"></a>
+            <a href="index.html" ><img src="image/lauzanne_logo.png" alt="Logo"></a>
             <h1>LAUSANNE</h1>
             <div class="icon">
                 <a href="#" ><p class="flaticon-search"></p></a>
                 <div class="meteo">
-                    <a href="#" ><p class="flaticon-storm"></p><p class="flaticon-30-degrees"></p></a>
+                    <a href="#/meteo" ><p class="flaticon-storm"></p><p class="flaticon-30-degrees"></p></a>
                 </div>
-                <a href="#" ><p class="flaticon-more"></p></a>
+                <a href="#/more" ><p class="flaticon-more"></p></a>
             </div>
         </nav>
     </div>
 
     <div class="container_body">
         <div class="reseaux_sociaux">
-            <a href="#" ><p class="flaticon-facebook"></p><p>Facebook</p></a>
-            <a href="#" ><p class="flaticon-twitter"></p><p>Twitter</p></a>
-            <a href="#" ><p class="flaticon-instagram"></p><p>Instagram</p></a>
-            <a href="#" ><p class="flaticon-pinterest-social-logo"></p><p>Pinterest</p></a>
-            <a href="#" ><p class="flaticon-youtube"></p><p>Youtube</p></a>
-            <a href="#" ><p class="flaticon-linkedin"></p><p>Linkedin</p></a>
+            <a href="#/facebook" ><p class="flaticon-facebook"></p><p>Facebook</p></a>
+            <a href="#/twitter" ><p class="flaticon-twitter"></p><p>Twitter</p></a>
+            <a href="#/instagram" ><p class="flaticon-instagram"></p><p>Instagram</p></a>
+            <a href="#/pinterest" ><p class="flaticon-pinterest-social-logo"></p><p>Pinterest</p></a>
+            <a href="#/youtube" ><p class="flaticon-youtube"></p><p>Youtube</p></a>
+            <a href="#/linkedin" ><p class="flaticon-linkedin"></p><p>Linkedin</p></a>
         </div>
 
 
         <div class="link_bottom">
             <ul>
-                <li><a href="#">See and Do</a></li>
-                <li><a href="#">Eating and Nightlife</a></li>
-                <li><a href="#">Useful</a></li>
+                <li><a href="#/see_and_do">See and Do</a></li>
+                <li><a href="#/eating_and_nightlife">Eating and Nightlife</a></li>
+                <li><a href="#/usefull">Useful</a></li>
             </ul>
         </div>
     </div>
