ajout new module

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -8,46 +8,25 @@
 </head>
 <body>
 <header>
-    <div class="bandeau_menu">
-        <div class="logo">
-            <a><img src=""></a>
-        </div>
-        <div class="menu">
-            <a><img src=""></a>
+    <nav>
+        <p>Maxime Didier</p>
+        <ul>
+            <li><a>Compétences</a></li>
+            <li><a>Formations</a></li>
+            <li><a>Réalisations</a></li>
+            <li><a>Contact</a></li>
+        </ul>
+    </nav>
+    <div>
+        <h1>Developpeur Web Full Stack</h1>
+        <div class="reseaux_sociaux">
+            <a></a>
         </div>
     </div>
-    <div class="titre_menu">
-        <h1>Developpeur Web Full-Stack</h1>
-    </div>
-    <div class="scroll_menu">
+    <div>
         <img src="">
     </div>
 </header>
-<div class="body">
-    <div class="presentation_body">
-
-    </div>
-    <div class="competence_body">
-
-    </div>
-    <div class="formation_body">
-
-    </div>
-    <div class="realisations_body">
-
-    </div>
-    <div class="contact_body">
-
-    </div>
-</div>
-
-<footer>
-    <div class="logo_footer">
-        <div class="logo">
-
-        </div>
-    </div>
-</footer>
 
 </body>
 </html>
