--- a/Front-End_Mentor/FAQ_Card/index.html
+++ b/Front-End_Mentor/FAQ_Card/index.html
@@ -1,50 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Frontend Mentor | FAQ Accordion Card</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style>
 </head>
 <body>
 <div class="container_faq">
-  <div class="images_faq">
-      <img src="images/illustration-box-desktop.svg" alt="Image boite">
-      <img src="images/illustration-woman-online-desktop.svg" alt="Image FAQ desktop">
-      <img src="images/illustration-woman-online-mobile.svg" alt="Image FAQ mobile">
-  </div>
-  <div class="content">
-
-  </div>
+    <div class="images_faq">
+        <img src="images/illustration-box-desktop.svg" alt="Image boite">
+        <img src="images/illustration-woman-online-desktop.svg" alt="Image FAQ desktop">
+        <img src="images/illustration-woman-online-mobile.svg" alt="Image FAQ mobile">
+    </div>
+    <div class="content">
+        <p>FAQ</p>
+        <div class="dividers">
+            <div class="question">
+                <p>How many team members can I invite?</p>
+                <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+            </div>
+            <div class="answer">
+                <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
+            </div>
+        </div>
+        <div class="dividers">
+            <div class="question">
+                <p>What is the maximum file upload size?</p>
+                <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+            </div>
+            <div class="answer">
+                <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+            </div>
+        </div>
+        <div class="dividers">
+            <div class="question">
+                <p>How do I reset my password?</p>
+                <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+            </div>
+            <div class="answer">
+                <p>Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
+            </div>
+        </div>
+        <div class="dividers">
+            <div class="question">
+                <p>Can I cancel my subscription?</p>
+                <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+            </div>
+            <div class="answer">
+                <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+            </div>
+        </div>
+        <div class="dividers">
+            <div class="question">
+                <p>Do you provide additional support?</p>
+                <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+            </div>
+            <div class="answer">
+                <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+            </div>
+        </div>
+    </div>
 </div>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
-
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
-
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+<div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+</div>
 </body>
 </html>
