--- a/Front-End_Mentor/FAQ_Card/index.html
+++ b/Front-End_Mentor/FAQ_Card/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Frontend Mentor | FAQ Accordion Card</title>
+    <script>
+        function toggleAnswer(nb){
+            document.getElementsByClassName("dividers")[nb].classList.toggle("dividersToggle");
+            console.log("ok");
+        }
+    </script>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
@@ -29,7 +35,7 @@
     </div>
     <div class="content">
         <p>FAQ</p>
-        <div class="dividers">
+        <div class="dividers" onclick="toggleAnswer(0)">
             <div class="question">
                 <p>How many team members can I invite?</p>
                 <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
@@ -38,7 +44,7 @@
                 <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
             </div>
         </div>
-        <div class="dividers">
+        <div class="dividers" onclick="toggleAnswer(1)">
             <div class="question">
                 <p>What is the maximum file upload size?</p>
                 <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
@@ -47,7 +53,7 @@
                 <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
             </div>
         </div>
-        <div class="dividers">
+        <div class="dividers" onclick="toggleAnswer(2)">
             <div class="question">
                 <p>How do I reset my password?</p>
                 <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
@@ -56,7 +62,7 @@
                 <p>Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
             </div>
         </div>
-        <div class="dividers">
+        <div class="dividers" onclick="toggleAnswer(3)">
             <div class="question">
                 <p>Can I cancel my subscription?</p>
                 <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
@@ -65,7 +71,7 @@
                 <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
             </div>
         </div>
-        <div class="dividers">
+        <div class="dividers" onclick="toggleAnswer(4)">
             <div class="question">
                 <p>Do you provide additional support?</p>
                 <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
