--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -174,42 +174,50 @@
     </div>
 </header>
 
-<div>
-    <div>
-        <h2>Présentation</h2>
-        <img src="" alt="Image maxime didier">
-        <p>Je suis développeur web depuis la fin de mes études, en 2021. Je serai heureux de pouvoir vous aider à réaliser vos différents  projets en lien avec le web.</p>
-        <p>De la conception de votre projet jusqu'à sa réalisation, et plus loin encore avec un possible maintient, je serai là pour vous conseiller, et vous assister durant v'entièreté du projet. </p>
+<div class="body_container">
+    <div class="presentation_container">
+        <div class="presentation">
+            <div class="presentation_image">
+                <h2>Présentation</h2>
+                <img src="images/profil.jpg" alt="Image maxime didier">
+            </div>
+            <div class="presentation_text">
+                <p>Je suis développeur web depuis la fin de mes études, en 2021. Je serai heureux de pouvoir vous aider à réaliser vos différents  projets en lien avec le web.</p>
+                <p>De la conception de votre projet jusqu'à sa réalisation, et plus loin encore avec un possible maintient, je serai là pour vous conseiller, et vous assister durant v'entièreté du projet. </p>
+            </div>
+
+        </div>
+        <div class="competences">
+            <h2>Compétences</h2>
+            <div>
+                <h3>Front-end</h3>
+                <div>
+                    <img src="" alt="Image logo css 3">
+                    <img src="" alt="Image logo scss">
+                    <img src="" alt="Image logo html 5">
+                    <img src="" alt="Image logo javascript">
+                    <img src="" alt="Image logo vuejs">
+                </div>
+            </div>
+            <div>
+                <h3>Back-end</h3>
+                <div>
+                    <img src="" alt="Image logo php">
+                </div>
+            </div>
+            <div>
+                <h3>Design-end</h3>
+                <div>
+                    <img src="" alt="Image logo photoshop">
+                    <img src="" alt="Image logo lightroom">
+                    <img src="" alt="Image logo in design">
+                    <img src="" alt="Image logo illustrator">
+                    <img src="" alt="Image logo xd">
+                </div>
+            </div>
+        </div>
     </div>
-    <div>
-        <h2>Compétences</h2>
-        <div>
-            <h3>Front-end</h3>
-            <div>
-                <img src="" alt="Image logo css 3">
-                <img src="" alt="Image logo scss">
-                <img src="" alt="Image logo html 5">
-                <img src="" alt="Image logo javascript">
-                <img src="" alt="Image logo vuejs">
-            </div>
-        </div>
-        <div>
-            <h3>Back-end</h3>
-            <div>
-                <img src="" alt="Image logo php">
-            </div>
-        </div>
-        <div>
-            <h3>Design-end</h3>
-            <div>
-                <img src="" alt="Image logo photoshop">
-                <img src="" alt="Image logo lightroom">
-                <img src="" alt="Image logo in design">
-                <img src="" alt="Image logo illustrator">
-                <img src="" alt="Image logo xd">
-            </div>
-        </div>
-    </div>
+
 
     <div>
         <h2>Formations</h2>
