--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -218,10 +218,13 @@
         </div>
     </div>
 
-
     <div>
+        <h2>Réalisations</h2>
+    </div>
+
+    <div class="formation">
         <h2>Formations</h2>
-        <div>
+        <div class="formation_card">
             <h3>Licence Professionnelle (2020-2021)</h3>
             <p>Aix Marseille Université, Gap 05000 </p>
             <div>
@@ -232,7 +235,7 @@
                 </ul>
             </div>
         </div>
-        <div>
+        <div class="formation_card">
             <h3>DUT Informatique (2018-2020)</h3>
             <p>IUT 2 Grenoble, Grenoble 38000 </p>
             <div>
@@ -244,7 +247,7 @@
                 </ul>
             </div>
         </div>
-        <div>
+        <div class="formation_card">
             <h3>BAC Général Scientifique (2015-2018)</h3>
             <p>Lycée des Eaux Claires, Grenoble 38000 </p>
             <div>
@@ -261,7 +264,7 @@
 
     </div>
 
-    <div>
+    <div class="form">
         <h2>Contact</h2>
         <form>
             <input required type="text" placeholder="Adresse mail :">
