--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -192,27 +192,113 @@
             <div>
                 <h3>Front-end</h3>
                 <div>
-                    <img src="" alt="Image logo css 3">
+                    <svg id="CSS" xmlns="http://www.w3.org/2000/svg" width="59" height="60" viewBox="0 0 59 60">
+                        <g id="Groupe_209" data-name="Groupe 209" transform="translate(0 0)">
+                            <g id="Groupe_208" data-name="Groupe 208">
+                                <ellipse id="Ellipse_10" data-name="Ellipse 10" cx="29.5" cy="30" rx="29.5" ry="30" fill="#2196f3"/>
+                            </g>
+                            <g id="CSS-2" data-name="CSS" transform="translate(15.177 10.572)">
+                                <path id="Tracé_303" data-name="Tracé 303" d="M32,0l2.6,29.171,11.653,3.241L57.9,29.173,60.5,0Z" transform="translate(-32 6.542)" fill="#fff"/>
+                                <path id="Tracé_304" data-name="Tracé 304" d="M131.648,97.887l-.323,3.771-.975,11.3-7.279,2.091-.006,0-7.275-2.093-.508-5.912h3.564l.265,3.066,3.956,1.109,0,0,3.962-1.109.54-5.109-12.459.035-.353-3.494,13.111-.161.265-3.74-13.727.04-.231-3.479h17.789Z" transform="translate(-108.823 -82.155)" fill="#2196f3"/>
+                                <g id="Groupe_179" data-name="Groupe 179" transform="translate(4.696)">
+                                    <path id="Tracé_294" data-name="Tracé 294" d="M98.73,4.6v0Z" transform="translate(-98.73 -1.355)" fill="#fff"/>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+                    <svg id="HTML" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
+                        <g id="Groupe_204" data-name="Groupe 204" transform="translate(0 0)">
+                            <g id="Groupe_203" data-name="Groupe 203">
+                                <circle id="Ellipse_8" data-name="Ellipse 8" cx="30" cy="30" r="30" fill="#f0652a"/>
+                            </g>
+                        </g>
+                        <path id="Tracé_334" data-name="Tracé 334" d="M40.2,39l2.547,28.727,11.491,3.258,11.55-3.258L68.394,39Zm22.626,9.359h-13.5l.3,3.613H62.471l-1.007,10.9L54.3,64.825h-.059l-7.226-2.014L46.6,57.3h3.495l.237,2.784,3.909,1.066,3.909-1.066.415-4.561H46.419l-.948-10.662H63.123Z" transform="translate(-24.749 -23.644)" fill="#fff"/>
+                    </svg>
+                    <svg id="JavaScript" xmlns="http://www.w3.org/2000/svg" width="59" height="60" viewBox="0 0 59 60">
+                        <g id="Groupe_188" data-name="Groupe 188" transform="translate(0 0)">
+                            <g id="Groupe_187" data-name="Groupe 187">
+                                <ellipse id="Ellipse_4" data-name="Ellipse 4" cx="29.5" cy="30" rx="29.5" ry="30" fill="#f0db4f"/>
+                            </g>
+                        </g>
+                        <g id="Layer_1_1_" transform="translate(13.633 18.273)">
+                            <g id="Groupe_190" data-name="Groupe 190">
+                                <g id="Groupe_189" data-name="Groupe 189">
+                                    <path id="Tracé_326" data-name="Tracé 326" d="M43.752,44.6h5.153V59.112c0,6.515-3.139,8.825-8.115,8.825A12.746,12.746,0,0,1,37,67.4l.592-4.205a8.683,8.683,0,0,0,2.665.415c2.192,0,3.554-1.007,3.554-4.5L43.752,44.6Z" transform="translate(-37 -44.245)" fill="#323330"/>
+                                    <path id="Tracé_327" data-name="Tracé 327" d="M64.066,62.006a13.217,13.217,0,0,0,5.745,1.422c2.369,0,3.613-1.007,3.613-2.547,0-1.422-1.066-2.251-3.85-3.2-3.791-1.362-6.338-3.495-6.338-6.871,0-3.85,3.317-6.812,8.707-6.812a13.4,13.4,0,0,1,5.864,1.185l-1.185,4.146a11.147,11.147,0,0,0-4.739-1.066c-2.251,0-3.317,1.066-3.317,2.192,0,1.481,1.244,2.132,4.265,3.258,4.028,1.481,5.923,3.613,5.923,6.871,0,3.85-2.9,7.108-9.24,7.108A15.193,15.193,0,0,1,63,66.271Z" transform="translate(-47.6 -44)" fill="#323330"/>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
                     <img src="" alt="Image logo scss">
-                    <img src="" alt="Image logo html 5">
-                    <img src="" alt="Image logo javascript">
                     <img src="" alt="Image logo vuejs">
                 </div>
             </div>
             <div>
                 <h3>Back-end</h3>
                 <div>
-                    <img src="" alt="Image logo php">
+                    <svg id="PHP" xmlns="http://www.w3.org/2000/svg" width="59" height="60" viewBox="0 0 59 60">
+                        <g id="Groupe_211" data-name="Groupe 211" transform="translate(0 0)">
+                            <g id="Groupe_210" data-name="Groupe 210">
+                                <ellipse id="Ellipse_11" data-name="Ellipse 11" cx="29.5" cy="30" rx="29.5" ry="30" fill="#36447f"/>
+                            </g>
+                        </g>
+                        <g id="Layer_2_1_" transform="translate(7.555 18.842)">
+                            <g id="Groupe_213" data-name="Groupe 213">
+                                <g id="Groupe_212" data-name="Groupe 212">
+                                    <path id="Tracé_340" data-name="Tracé 340" d="M35.707,54.906a3.567,3.567,0,0,1,2.725.77c.474.474.533,1.362.3,2.547a4.3,4.3,0,0,1-1.422,2.725,5.292,5.292,0,0,1-3.2.829H31.916l1.3-6.871ZM27,68.707h3.554l.829-4.383h3.08a10.529,10.529,0,0,0,3.317-.415,6.5,6.5,0,0,0,2.369-1.422,8.76,8.76,0,0,0,1.481-1.836,6.892,6.892,0,0,0,.77-2.192c.355-1.955.118-3.435-.829-4.561a5.7,5.7,0,0,0-4.5-1.6H30.2Z" transform="translate(-27 -47.976)" fill="#c9d5f7"/>
+                                    <path id="Tracé_341" data-name="Tracé 341" d="M56.858,45h3.554l-.829,4.383h3.139c1.955,0,3.376.355,4.087,1.066.77.711,1.007,1.836.652,3.376l-1.481,7.641H62.366l1.422-7.226c.178-.829.118-1.362-.178-1.658a2.553,2.553,0,0,0-1.777-.474H58.99l-1.836,9.359H53.6Z" transform="translate(-37.844 -45)" fill="#c9d5f7"/>
+                                    <path id="Tracé_342" data-name="Tracé 342" d="M84.407,54.906a3.567,3.567,0,0,1,2.725.77c.474.474.533,1.362.3,2.547a4.3,4.3,0,0,1-1.422,2.725,5.292,5.292,0,0,1-3.2.829H80.616l1.3-6.871ZM75.7,68.707h3.554l.829-4.383h3.08a10.529,10.529,0,0,0,3.317-.415,6.5,6.5,0,0,0,2.369-1.422,8.76,8.76,0,0,0,1.481-1.836,6.893,6.893,0,0,0,.77-2.192c.355-1.955.118-3.435-.829-4.561a5.7,5.7,0,0,0-4.5-1.6H78.9Z" transform="translate(-46.854 -47.976)" fill="#c9d5f7"/>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+                    <img src="" alt="Image logo laravel">
                 </div>
             </div>
             <div>
-                <h3>Design-end</h3>
+                <h3>Design</h3>
                 <div>
-                    <img src="" alt="Image logo photoshop">
-                    <img src="" alt="Image logo lightroom">
-                    <img src="" alt="Image logo in design">
-                    <img src="" alt="Image logo illustrator">
-                    <img src="" alt="Image logo xd">
+                    <svg id="Illustrator" xmlns="http://www.w3.org/2000/svg" width="59.947" height="60" viewBox="0 0 59.947 60">
+                        <g id="Groupe_202" data-name="Groupe 202" transform="translate(0 0)">
+                            <path id="Tracé_331" data-name="Tracé 331" d="M45.1,73.443a28.321,28.321,0,1,1,28.3-28.321A28.361,28.361,0,0,1,45.1,73.443Z" transform="translate(-15.121 -15.121)" fill="#261300"/>
+                            <path id="Tracé_332" data-name="Tracé 332" d="M43.974,17.42A26.58,26.58,0,1,1,17.417,44,26.619,26.619,0,0,1,43.974,17.42m0-3.42A30,30,0,1,0,73.947,44,30,30,0,0,0,43.974,14Z" transform="translate(-14 -14)" fill="#ff7f18"/>
+                        </g>
+                        <path id="Tracé_333" data-name="Tracé 333" d="M63.1,49.894c0-.18.06-.24.24-.24h3.417c.18,0,.24.06.24.24V67.218c0,.18-.06.24-.24.24H63.341c-.24,0-.3-.12-.3-.3l.06-17.265Zm-.24-4.976a2.218,2.218,0,1,1,2.158,2.218A2.031,2.031,0,0,1,62.861,44.918ZM52.97,57.087c-.6-2.458-2.038-7.733-2.638-10.311h-.06c-.48,2.578-1.619,6.894-2.518,10.311Zm-6.055,3.6-1.738,6.594c-.06.18-.12.24-.3.24H41.64c-.24,0-.24-.06-.24-.3l6.234-21.761a6.984,6.984,0,0,0,.24-1.8c0-.18.06-.24.18-.24H52.67c.18,0,.24.06.24.24l6.954,23.679c.06.18,0,.3-.18.3H56.027c-.18,0-.3-.06-.3-.18l-1.8-6.594H46.915Z" transform="translate(-24.974 -25.469)" fill="#ff7f18"/>
+                    </svg>
+                    <svg id="Indesign" xmlns="http://www.w3.org/2000/svg" width="59.947" height="60" viewBox="0 0 59.947 60">
+                        <g id="Groupe_205" data-name="Groupe 205" transform="translate(0 0)">
+                            <path id="Tracé_335" data-name="Tracé 335" d="M45.1,73.443a28.321,28.321,0,1,1,28.3-28.321A28.361,28.361,0,0,1,45.1,73.443Z" transform="translate(-15.121 -15.121)" fill="#26000f"/>
+                            <path id="Tracé_336" data-name="Tracé 336" d="M43.974,17.42A26.58,26.58,0,1,1,17.417,44,26.619,26.619,0,0,1,43.974,17.42m0-3.42A30,30,0,1,0,73.947,44,30,30,0,0,0,43.974,14Z" transform="translate(-14 -14)" fill="#ff408c"/>
+                        </g>
+                        <path id="Tracé_337" data-name="Tracé 337" d="M63.584,53.412a2.625,2.625,0,0,0-1.259-.24c-2.758,0-4.736,2.158-4.736,5.695,0,4.016,1.978,5.695,4.436,5.695a3.936,3.936,0,0,0,1.5-.24V53.412Zm-1.139-3.537a6.884,6.884,0,0,1,1.139.06V44.24a.22.22,0,0,1,.24-.24H67.3c.18,0,.24.06.24.18V64.262a14.152,14.152,0,0,0,.12,2.158c0,.18-.06.18-.18.24a12.82,12.82,0,0,1-5.635,1.259c-4.736,0-8.153-2.937-8.153-8.932-.12-5.1,3.3-9.112,8.752-9.112ZM49.8,67.379c0,.24-.06.3-.3.3H46.2c-.24,0-.3-.12-.3-.3V44.3c0-.24.12-.3.3-.3h3.357c.18,0,.24.06.24.24Z" transform="translate(-26.777 -25.989)" fill="#ff408c"/>
+                    </svg>
+                    <svg id="Lightroom" xmlns="http://www.w3.org/2000/svg" width="59.947" height="60" viewBox="0 0 59.947 60">
+                        <g id="Groupe_214" data-name="Groupe 214" transform="translate(0 0)">
+                            <path id="Tracé_343" data-name="Tracé 343" d="M45.1,73.443a28.321,28.321,0,1,1,28.3-28.321A28.361,28.361,0,0,1,45.1,73.443Z" transform="translate(-15.121 -15.121)" fill="#0d2531"/>
+                            <path id="Tracé_344" data-name="Tracé 344" d="M43.974,17.42A26.58,26.58,0,1,1,17.417,44,26.619,26.619,0,0,1,43.974,17.42m0-3.42A30,30,0,1,0,73.947,44,30,30,0,0,0,43.974,14Z" transform="translate(-14 -14)" fill="#aad1eb"/>
+                        </g>
+                        <g id="Groupe_215" data-name="Groupe 215" transform="translate(18.823 18.011)">
+                            <path id="Tracé_345" data-name="Tracé 345" d="M61.766,53.891a19.988,19.988,0,0,0-.12-2.1.277.277,0,0,1,.18-.3,22.979,22.979,0,0,1,7.973-1.5c.18,0,.24.06.24.24v3.117c0,.18-.06.24-.24.24a13.488,13.488,0,0,0-4.136.42V67.739c0,.18-.06.24-.24.24H62.005c-.18,0-.24-.06-.24-.24V53.891ZM45.7,67.979c-.24,0-.3-.12-.3-.3V44.3c0-.18.06-.3.24-.3h3.417c.18,0,.24.06.24.24V64.382h8.932c.18,0,.24.06.18.24l-.54,3.057c0,.24-.12.3-.3.3Z" transform="translate(-45.4 -44)" fill="#aad1eb"/>
+                        </g>
+                    </svg>
+                    <svg id="Photoshop" xmlns="http://www.w3.org/2000/svg" width="59.947" height="60" viewBox="0 0 59.947 60">
+                        <g id="Groupe_221" data-name="Groupe 221" transform="translate(0 0)">
+                            <path id="Tracé_347" data-name="Tracé 347" d="M45.1,73.443a28.321,28.321,0,1,1,28.3-28.321A28.361,28.361,0,0,1,45.1,73.443Z" transform="translate(-15.121 -15.121)" fill="#001d26"/>
+                            <path id="Tracé_348" data-name="Tracé 348" d="M43.974,17.42A26.58,26.58,0,1,1,17.417,44,26.619,26.619,0,0,1,43.974,17.42m0-3.42A30,30,0,1,0,73.947,44,30,30,0,0,0,43.974,14Z" transform="translate(-14 -14)" fill="#31c5f0"/>
+                        </g>
+                        <path id="Tracé_349" data-name="Tracé 349" d="M65.68,53.172c-1.679,0-2.278.839-2.278,1.559,0,.779.36,1.319,2.638,2.458,3.357,1.619,4.436,3.177,4.436,5.455,0,3.417-2.638,5.275-6.175,5.275a9.182,9.182,0,0,1-4.376-.9.362.362,0,0,1-.18-.36V63.543c0-.24.12-.3.24-.18A7.678,7.678,0,0,0,64.3,64.622c1.679,0,2.4-.719,2.4-1.679,0-.779-.48-1.439-2.638-2.578-3.057-1.439-4.316-2.937-4.316-5.4,0-2.758,2.158-5.036,5.935-5.036a10.283,10.283,0,0,1,3.837.6.519.519,0,0,1,.24.42v2.937c0,.18-.12.3-.3.24a7.345,7.345,0,0,0-3.777-.959Zm-18.4,2.578a13.632,13.632,0,0,0,1.738.06c2.518,0,4.856-.9,4.856-4.256,0-2.7-1.679-4.076-4.556-4.076-.839,0-1.679.06-2.038.06V55.75ZM43.5,44.36c0-.12.3-.24.48-.24,1.379-.06,3.417-.12,5.515-.12,5.935,0,8.213,3.237,8.213,7.433,0,5.455-3.957,7.793-8.752,7.793-.839,0-1.079-.06-1.679-.06v8.213c0,.18-.06.24-.24.24h-3.3c-.18,0-.24-.06-.24-.24V44.36Z" transform="translate(-25.816 -25.989)" fill="#31c5f0"/>
+                    </svg>
+                    <svg id="Composant_22_1" data-name="Composant 22 – 1" xmlns="http://www.w3.org/2000/svg" width="59.947" height="60" viewBox="0 0 59.947 60">
+                        <g id="Indesign">
+                            <g id="Groupe_205" data-name="Groupe 205">
+                                <path id="Tracé_335" data-name="Tracé 335" d="M45.1,73.443a28.321,28.321,0,1,1,28.3-28.321A28.361,28.361,0,0,1,45.1,73.443Z" transform="translate(-15.121 -15.121)" fill="#26000f"/>
+                                <path id="Tracé_336" data-name="Tracé 336" d="M43.974,17.42A26.58,26.58,0,1,1,17.417,44,26.619,26.619,0,0,1,43.974,17.42m0-3.42A30,30,0,1,0,73.947,44,30,30,0,0,0,43.974,14Z" transform="translate(-14 -14)" fill="#ff408c"/>
+                            </g>
+                        </g>
+                        <g id="Groupe_235" data-name="Groupe 235" transform="translate(11.773 8.828)">
+                            <text id="Xd" transform="translate(0 33)" fill="#ff408c" font-size="35" font-family="Calibri"><tspan x="0" y="0">Xd</tspan></text>
+                        </g>
+                    </svg>
                 </div>
             </div>
         </div>
@@ -280,7 +366,7 @@
 <footer>
     <div class="footer_infos">
         <div>
-            <svg xmlns="http://www.w3.org/2000/svg" height="45px" width="45px" fill="#33464d" viewBox="0 0 25 25">
+            <svg xmlns="http://www.w3.org/2000/svg" height="35px" width="35px" fill="#33464d" viewBox="0 0 25 25">
                 <g id="noun_Mail_1988539" transform="translate(-1.67 -1.67)">
                     <g id="Groupe_245" data-name="Groupe 245" transform="translate(1.67 1.67)">
                         <path id="Tracé_1003" data-name="Tracé 1003" d="M21.014,13.166v4.718a1.862,1.862,0,0,1-1.844,1.844h-10a1.85,1.85,0,0,1-1.844-1.844V10.456A1.847,1.847,0,0,1,9.171,8.612h10a1.853,1.853,0,0,1,1.844,1.844Zm-.861-1.329-4.441,2.708a2.969,2.969,0,0,1-3.109,0L8.188,11.935v5.949a.989.989,0,0,0,.983.983h10a1,1,0,0,0,.983-.983V11.837Zm-11.965-.9,4.852,2.871a2.115,2.115,0,0,0,2.222,0l4.891-2.982v-.372a.992.992,0,0,0-.983-.983h-10a.987.987,0,0,0-.983.983v.481ZM7.732,4.479a.43.43,0,0,1-.478-.714A12.285,12.285,0,0,1,14.17,1.67,12.5,12.5,0,1,1,3.8,7.182a.43.43,0,0,1,.714.481A11.641,11.641,0,1,0,14.17,2.531,11.455,11.455,0,0,0,7.732,4.479Z" transform="translate(-1.67 -1.67)"/>
@@ -290,7 +376,7 @@
 
         </div>
         <div>
-            <svg xmlns="http://www.w3.org/2000/svg" height="45px" width="45px" fill="#33464d" viewBox="0 0 18 26">
+            <svg xmlns="http://www.w3.org/2000/svg" height="35px" width="35px" fill="#33464d" viewBox="0 0 18 26">
                 <g id="noun_Phone_3483848" transform="translate(373 303)">
                     <path id="Tracé_1002" data-name="Tracé 1002" d="M22,3a3.015,3.015,0,0,1,3,3V8a1,1,0,0,1-1,1H9V23H20.014a1,1,0,1,1,0,2H9v1a1,1,0,0,0,1,1H22a.984.984,0,0,0,1-1V11.986a1,1,0,1,1,2,0V26a3.015,3.015,0,0,1-3,3H10a3,3,0,0,1-3-3V6a3,3,0,0,1,3-3Zm1,4V6a.984.984,0,0,0-1-1H10A1,1,0,0,0,9,6V7Z" transform="translate(-380 -306)"/>
                 </g>
